# piscine_python

py0/ex0/: ft_hello_garden.py
py0/ex1/: ft_garden_name.py
py0/ex2/: ft_plot_area.py
py0/ex3/: ft_harvest_total.py
py0/ex4/: ft_plant_age.py
py0/ex5/: ft_water_reminder.py
py0/ex6/: ft_count_harvest_iteratice.py  ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py0/ex7/: ft_seed_inventory.py
py1/ex0/: ft_garden_intro.py
py1/ex1/: ft_garden_data.py
py1/ex2/: ft_plant_growth.py
py1/ex3/: ft_plant_factory.py
py1/ex4/: ft_garden_security.py
py1/ex5/: ft_plant_types.py
py1/ex6/: ft_garden_analytics.py
py10/ex0/: lambda_spells.py
py10/ex1/: higher_magic.py
py10/ex2/: scope_mysteries.py
py10/ex3/: functools_artifacts.py
py10/ex4/: decorator_mastery.py
py2/ex0/: ft_first_exception.py
py2/ex1/: ft_raise_exception.py
py2/ex2/: ft_different_errors.py
py2/ex3/: ft_custom_errors.py
py2/ex4/: ft_finally_block.py
py3/ex0/: ft_command_quest.py
py3/ex1/: ft_score_analytics.py
py3/ex2/: ft_coordinate_system.py
py3/ex3/: ft_achievement_tracker.py
py3/ex4/: ft_inventory_system.py
py3/ex5/: ft_data_stream.py
py3/ex6/: ft_data_alchemist.py
py4/ex0/: ft_ancient_text.py
py5/ex1/: data_stream.py
py6/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_1.py  ft_transmutation_1.py  ft_transmutation_2.py
py7/: battle.py  capacitor.py  tournament.py
py8/ex1/: loading.py  pyproject.toml  requirements.txt
(+27 files in other folders)
